// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a page with entity 1`] = `
"<h1>
        About
        <span>Us</span>
      </h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav>"
`;

exports[`should render a page with pre-fetched data 1`] = `
"<h1>Antony's Posts</h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav>
      <ul>
        <li><a href="/posts/1">Inglorious Store</a></li><li><a href="/posts/2">lit-html</a></li><li><a href="/posts/3">Inglorious Web</a></li><li><a href="/posts/4">Inglorious SSX</a></li>
      </ul>"
`;

exports[`should render a static page fragment 1`] = `
"<h1>
        About
        <span></span>
      </h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav>"
`;

exports[`should render a whole static page 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <title>About</title>
  
  <link rel="stylesheet" href="./style.css">
</head>
<body>
  <div id="root"><h1>
        About
        <span></span>
      </h1>
      <nav>
        <a href="/">Home</a> | <a href="/about">About</a> |
        <a href="/posts">Posts</a>
      </nav></div>

  <script type="module" src="/main.js"></script>
  <script type="module" src="./ga.js"></script>
</body>
</html>"
`;
